# multi_agent_blackboard_system

./: .gitignore  .travis.yaml  .travis.yml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  sm_gpr.pkl
doc/: BB_Example.ipynb  Benchmarks_Engineering.ipynb  Prototyping.ipynb  SFR_Analysis.ipynb  SFR_Optimization.ipynb  Untitled.ipynb  bb_archive.h5  bb_sfr_archive_testing.h5  bb_sfr_opt_archive.h5  bb_sfr_opt_archive_test1.h5  bb_sm_testing.ipynb  bb_testing.ipynb  blackboard_db  core_error_test1.csv  index.md  sm.csv
docs/: _config.yml  index.md
src/: Untitled.ipynb  bb_basic.py  bb_benchmark.py  bb_opt.py  bb_sfr_opt.py  benchmark_bb.py  blackboard.py  controller.py  database_generator.py  h5Interface.py  ka.py  ka_br.py  ka_rp.py  knowledge_agent.py  moo_benchmarks.py  outputInterface.py  performance_measure.py  reactorInterface.py  train_surrogate_models.py  utilities.py
test/: Untitled.ipynb  bb_benchmark.ipynb  biblio.bib  sf1_benchmark.h5  sf2_benchmark.h5  sfr_db_new.h5  sm_ann.pkl  sm_lr.pkl  sm_lr_2obj.pkl  sm_lr_4obj.pkl  test_bb_basic.py  test_bb_opt.py  test_bb_sfr_opt.py  test_benchmark_utils.py  test_blackboard.py  test_blackboard_agent.py  test_combined_ka.py  test_controller.py  test_database_generator.py  test_h5_interface.py  test_ka.py  test_ka_agent.py  test_ka_br.py  test_ka_proxy.py  test_ka_rp.py  test_ka_verify.py  test_kabr_base.py  test_kabr_inter.py  test_kabr_lvl1.py  test_kabr_lvl2.py  test_kabr_lvl3.py  test_kas_base.py  test_kas_ga.py  test_kas_hc.py  test_kas_lhc.py  test_kas_ns.py  test_kas_pymoo.py  (+13 more)
(+76 files in other folders)
