[metadata]
name = mabs
version = 0.0.1
author = Ryan Stewart
author_email = ryan.stewart@isu.edu
description = A package containing the framework for a multi-agent blackboard system for optimization problems.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ryanstwrt/multi_agent_blackboard_system
project_urls =
    Bug Tracker = https://github.com/ryanstwrt/multi_agent_blackboard_system/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
    = test
    = docs
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src